option('unsafe-recover-nil-uuid', type: 'boolean', value: false)
option('unsafe-writable-connectivity',
       type: 'boolean',
       value: false,
       description: 'Allow writes to the Connectivity member of the au.com.codeconstruct.MCTP.Endpoint1 interface on endpoint objects')
option('tests', type: 'boolean', value: true)
